<resources>


    <string name="app_name">Power Darts</string>

    <string name="instructions">Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="play_game">Play Game</string>
    <string name="statistics">Statistics</string>
    <string name="resume_game">Resume Game</string>
    <string name="quit">Quit</string>
    <string name="dartboard_pic">This is dartboard image</string>
    <string name="db2">dartboard_2</string>
    <string name="title_activity_play_game">play_game</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_statistics">statistics</string>
    <string name="num_1">new button</string>
    <string name="three_dart_ave">Three dart average</string>
    <string name="one_dart_average">One dart average</string>
    <string name="Highest_score">Highest score</string>
    <string name="maximums">180s</string>
    <string name="one_fortys">140+</string>
    <string name="one_hundreds">100+</string>
    <string name="legs_played">Legs played</string>
    <string name="sixty_plus">60+</string>
    <string name="best_leg">Best leg</string>
    <string name="worst_leg">Worst leg</string>

    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="enter_button">enter</string>
    <string name="del_button">del</string>
    <string name="stats">stats</string>
    <string name="num_zero">0</string>
    <string name="quick_input_26">26</string>
    <string name="player_heading">Player:</string>
    <string name="legs_heading">Legs:</string>
    <string name="score_left_heading">Left:</string>
    <string name="current_player_name_heading">Player 1:</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="checkout_percent">Checkout Percent</string>
    <string name="statistics_heading">Match Statistics</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="title_activity_splash">Splash</string>
    <string name="player1_tag_in_statistics_activity">Player 1</string>
    <string name="player2_tag_in_statistics_activity">Player 2</string>
    <string name="legs_won">Legs Won</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_game_options">game_options</string>
    <string name="currentPlayerIcon">►</string>
    <string name="resetScoresNewGame">Reset</string>
    <string name="newGamePrompt">Are you sure you want a new game</string>
    <string name="positiveAnswer">Yes</string>
    <string name="noNewGame">No</string>
    <string name="title_activity_game_setup">game_setup</string>
    <string name="title_activity_instructions_screen">instructions_screen</string>
    <string name="instructions_tag">Instructions</string>
    <string name="setup_tag">Setup Screen</string>
    <string name="game_instructions_txt">In this screen you can set up the number of legs you would like to play as well as the start score and also the timer details and the penalty deductions</string>
    <string name="scorer_sc">Scorer Screen</string>
    <string name="game_info_instructions_txt">To begin the game press the start button. Then before you can input your you must stop the timer using the stop buttton.</string>

</resources>
