<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sean_redmond.darts_scorer.InstructionsScreen"
    android:background="@drawable/gradient"
    android:id="@+id/myRelLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instructions_tag"
        android:id="@+id/textView25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffff4624"
        android:gravity="center"
        android:background="@drawable/black_shape_border" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setup_tag"
        android:id="@+id/textView26"
        android:textColor="#ffff4624"
        android:background="@drawable/black_shape_border"
        android:gravity="center"
        android:layout_below="@+id/textView25"
        android:layout_alignLeft="@+id/textView28"
        android:layout_alignStart="@+id/textView28"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/game_instructions_txt"
        android:id="@+id/textView27"
        android:layout_below="@+id/textView26"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textColor="#fff" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scorer_sc"
        android:id="@+id/textView28"
        android:layout_marginTop="28dp"
        android:textColor="#ffff4624"
        android:layout_below="@+id/textView27"
        android:layout_centerHorizontal="true"
        android:background="@drawable/black_shape_border"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/game_info_instructions_txt"
        android:id="@+id/textView29"
        android:textColor="#fff"
        android:layout_below="@+id/textView28"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>
