<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relative_layout"
    android:background="#ff621664">



    <Button
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:text="@string/play_game"
        android:id="@+id/button"
        android:background="@drawable/rounded_corners"
        android:textColor="#ff000000"
        android:textSize="25sp"
        android:onClick="onClick"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <Button
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:text="@string/statistics"
        android:id="@+id/button2"
        android:background="@drawable/rounded_corners"
        android:textColor="#ff000000"
        android:textSize="25sp"
        android:onClick="onClick2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="26dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dartboard"
        android:id="@+id/imageView"
        android:clickable="false"
        android:contentDescription="@string/dartboard_pic"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
